# weather_cli

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
src/command_line_interface/: custom_config.rs  mod.rs
src/weather_integrations/: mod.rs  open_weather_map.rs  open_weather_map_schemas.rs  weather_api.rs  weather_api_schemas.rs
