[package]
name = "wether_elastio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0"
async-trait = "0.1.58"
